objects/pmoParts__x.object
<CustomObject>
    <description>pmoParts</description>
    <externalDataSource>Order_Status</externalDataSource>
    <externalName>pmoParts</externalName>
    <fields>
        <fullName>AIRLINE_OPERATOR__c</fullName>
        <description>AIRLINE_OPERATOR</description>
        <externalDeveloperName>AIRLINE_OPERATOR</externalDeveloperName>
        <label>AIRLINE_OPERATOR</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIRLINE_OWNER__c</fullName>
        <description>AIRLINE_OWNER</description>
        <externalDeveloperName>AIRLINE_OWNER</externalDeveloperName>
        <label>AIRLINE_OWNER</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PART_NUM__c</fullName>
        <description>PART_NUM</description>
        <externalDeveloperName>PART_NUM</externalDeveloperName>
        <label>PART_NUM</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>pmoParts</label>
    <pluralLabel>pmoParts</pluralLabel>
</CustomObject>